--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
         "less-middleware": "~2.2.0",
         "lodash": "^4.17.10",
         "morgan": "~1.8.1",
+        "mysql2": "^1.5.3",
         "request": "^2.81.0",
         "request-promise": "^4.2.1",
+        "sequelize": "^4.37.10",
         "serve-favicon": "~2.4.2",
         "session-file-store": "^1.1.2",
         "urlencode": "^1.1.0",
