--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
     "private": true,
     "scripts": {
         "start": "node ./bin/www",
-        "init": "webpack --progress --config ./build/webpack.dev.config.js",
         "dev": "webpack-dev-server --content-base ./views/ --open --inline --hot --compress --history-api-fallback --config ./build/webpack.dev.config.js",
+        "server": "cross-env NODE_ENV=development node ./bin/www",
         "build": "webpack --progress --hide-modules --config ./build/webpack.prod.config.js",
-        "lint": "eslint --fix --ext .js,.vue src"
+        "lint": "eslint --fix --ext .js,.vue frontend"
     },
     "dependencies": {
         "@xkeshi/vue-qrcode": "^0.3.0",
@@ -51,6 +51,7 @@
         "babel-polyfill": "^6.26.0",
         "babel-preset-es2015": "^6.24.1",
         "babel-runtime": "^6.11.6",
+        "cross-env": "^5.1.6",
         "css-loader": "^0.28.7",
         "eslint": "^3.12.2",
         "eslint-plugin-html": "^1.7.0",
