完成笔记编辑器。

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "jsdom": "^11.2.0",
         "less-middleware": "~2.2.0",
         "lodash": "^4.17.10",
+        "marked": "^0.4.0",
         "morgan": "~1.8.1",
         "mysql2": "^1.5.3",
         "request": "^2.81.0",
