将登录功能改用vuex实现。

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -27,9 +27,15 @@
             "always"
         ],
         "no-console": [
-            "error", 
-            { 
+            "error",
+            {
                 "allow": ["warn", "error", "info"]
+            }
+        ],
+        "vue/no-parsing-error": [
+            2,
+            {
+                "x-invalid-end-tag": false
             }
         ]
     }
